# perihelion

./: .nvim.lua  CMakeLists.txt  README.md  imgui.ini  justfile
dependencies/adjust/: adjust.cpp  adjust.h
html/: shell-file.html
patches/: raylib-increase-camera-pan-speed.patch
src/: Object.hpp  Preset.hpp  Vector3Double.cpp  Vector3Double.hpp  main.cpp  utils.cpp  utils.hpp
